# otherside-defense

./: Cargo.toml  README.md
crates/ods-app/: Cargo.toml
crates/ods-app/src/: audio.rs  basescape.rs  battle_screen.rs  chronicle.rs  config.rs  figures.rs  geoscape.rs  globe.rs  icons.rs  main.rs  pixfont.rs  portraits.rs  screenshot.rs  theme.rs
crates/ods-geo/: Cargo.toml
crates/ods-geo/src/: base.rs  campaign.rs  data.rs  director.rs  geography.rs  lib.rs  missions.rs  research.rs
crates/ods-render/: Cargo.toml
crates/ods-render/src/: camera.rs  lib.rs  renderer.rs
crates/ods-sim/: Cargo.toml
crates/ods-sim/data/: species.ron  weapons.ron
crates/ods-sim/examples/: playtest.rs
crates/ods-sim/src/: ai.rs  battle.rs  body.rs  data.rs  lib.rs  scenario.rs  tiles.rs  units.rs
crates/ods-voxel/: Cargo.toml
crates/ods-voxel/src/: chunk.rs  lib.rs  mesh.rs  world.rs
docs/design/: homage-translation.md  tech-stack.md
docs/research/: xcom-ufo-defense-reference.md
tools/: gen_earth.py
