[workspace]
resolver = "3"
members = [
    "crates/ods-voxel",
    "crates/ods-sim",
    "crates/ods-geo",
    "crates/ods-render",
    "crates/ods-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
glam = "0.30"
rand = "0.9"
rand_pcg = { version = "0.9", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "27"
winit = "0.30"
pollster = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
rodio = "0.19"
ron = "0.8"

ods-voxel = { path = "crates/ods-voxel" }
ods-sim = { path = "crates/ods-sim" }
ods-geo = { path = "crates/ods-geo" }
ods-render = { path = "crates/ods-render" }

[profile.dev]
# Voxel meshing is unusably slow at opt-level 0 once maps get real.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
