[package]
name = "ods-app"
version.workspace = true
edition.workspace = true

[dependencies]
ods-voxel = { workspace = true }
ods-sim = { workspace = true }
ods-geo = { workspace = true }
ods-render = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
serde_json = { workspace = true }
rodio = { workspace = true }
