[package]
name = "ods-render"
version.workspace = true
edition.workspace = true

[dependencies]
ods-voxel = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
